src/objects/C501_Class_Notification__c.object
<CustomObject>
    <fields>
        <fullName>Confirmation_Email_Template__c</fullName>
        <label>Confirmation Email Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Email_Template_Confirmation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Record_Type_Id__c</fullName>
        <formula>IF(TEXT(Contact_Record_Type__c) = &quot;Facility&quot;, &quot;0126A000000hDbzQAE&quot;,
IF(TEXT(Contact_Record_Type__c) = &quot;Intern&quot;, &quot;0126A000000hC3yQAE&quot;,
IF(TEXT(Contact_Record_Type__c) = &quot;Mentor&quot;, &quot;0126A000000hC3zQAE&quot;,
IF(TEXT(Contact_Record_Type__c) = &quot;Substitute&quot;, &quot;0126A000000hC40QAE&quot;,
IF(TEXT(Contact_Record_Type__c) = &quot;Trainer&quot;, &quot;0126A000000hD9MQAU&quot;,
IF(TEXT(Contact_Record_Type__c) = &quot;Training&quot;, &quot;0126A000000hC41QAE&quot;, &quot;Unknown&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Record Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Type__c</fullName>
        <label>Contact Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
                <value>
                    <fullName>Mentor</fullName>
                </value>
                <value>
                    <fullName>Substitute</fullName>
                </value>
                <value>
                    <fullName>Trainer</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reminder_Email_Template__c</fullName>
        <label>Reminder Email Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Email_Template_Reminder</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Class Notifications</relationshipLabel>
        <relationshipName>Class_Notifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Class Notification</label>
    <nameField>
        <label>Class Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Class Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>